--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Testing Backend
+      - name: Testing Frontend
         uses: actions/setup-node@v3
         with:
           node-version: 14
