--- a/package.json
+++ b/package.json
@@ -3,26 +3,56 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "/app",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
+    "dev:server": "tsx server.ts",
+    "dev:client": "npm run build:client && vite --config vite.config.ts dev",
+    "build:client": "vite build --outDir dist/client --ssrManifest",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build:server": "vite build --outDir dist/server --ssr src/entry-server.js"
   },
   "dependencies": {
+    "@types/serve-static": "^1.15.4",
     "@nivo/bar": "^0.87.0",
     "@nivo/pie": "^0.87.0",
+    "@vitejs/plugin-react-swc": "^3.7.1",
+    "compression": "^1.7.4",
+    "cross-env": "^7.0.3",
+    "express": "^4.21.1",
     "lucide-react": "^0.452.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "sirv": "^3.0.0",
+    "tsx": "^3.14.0",
+    "autoprefixer": "^10.4.16",
+    "serve-static": "^1.15.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@types/compression": "^1.7.5",
+    "@types/express": "^5.0.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.0.0",
+    "@types/concurrently": "6.4.0",
+    "@types/eslint": "8.44.6",
+    "@types/node": "20.8.10",
+    "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.9.1",
+    "@vitest/coverage-v8": "^0.34.6",
+    "concurrently": "8.2.2",
+    "copyfiles": "^2.4.1",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-react": "^7.33.2",
+    "jsdom": "^22.1.0",
+    "prettier": "^3.0.3",
+    "rimraf": "^5.0.5",
+    "vitest": "^0.34.6",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.11.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
