--- a/package.json
+++ b/package.json
@@ -6,10 +6,18 @@
   "scripts": {
     "dev:server": "tsx server.ts",
     "dev:client": "npm run build:client && vite --config vite.config.ts dev",
+    "build": "rimraf dist && tsc -p tsconfig.json && npm run build:client && npm run build:server && npm run copy-files",
     "build:client": "vite build --outDir dist/client --ssrManifest",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "build:server": "vite build --outDir dist/server --ssr src/entry-server.js"
+    "build:server": "vite build --ssr src/client/entry-server.tsx --outDir dist/server",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "coverage": "vitest --coverage",
+    "typecheck": "tsc --noEmit",
+    "serve": "npm run build && cross-env NODE_ENV=production node ./dist/server",
+    "serve:local": "vite serve",
+    "clean": "rimraf dist/",
+    "copy-files": "copyfiles \"public/**/*\" dist && copyfiles -u 2 \"dist/client/**/*\" dist && copyfiles -u 2 \"dist/client/assets/**/*\" dist/public",
+    "format": "prettier --write src types"
   },
   "dependencies": {
     "@types/serve-static": "^1.15.4",
