--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "serve": "npm run build && cross-env NODE_ENV=production node ./dist/server",
     "serve:local": "vite serve",
     "clean": "rimraf dist/",
-    "copy-files": "copyfiles \"public/**/*\" dist && copyfiles -u 2 \"dist/client/**/*\" dist && copyfiles -u 2 \"dist/client/assets/**/*\" dist/public",
+    "copy-files": "copyfiles \"public/**/*\" dist && copyfiles -u 2 \"dist/client/**/*\" dist && copyfiles -u 2 \"dist/client/assets/**/*\" dist/public && copyfiles -u 1 dist/**/* ../../app.ipesistemas.com.br/",
     "format": "prettier --write src types"
   },
   "dependencies": {
@@ -43,28 +43,13 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^14.0.0",
-    "@types/concurrently": "6.4.0",
-    "@types/eslint": "8.44.6",
     "@types/node": "20.8.10",
     "@types/react-router-dom": "^5.3.3",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.9.1",
-    "@vitest/coverage-v8": "^0.34.6",
-    "concurrently": "8.2.2",
     "copyfiles": "^2.4.1",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-react": "^7.33.2",
     "jsdom": "^22.1.0",
-    "prettier": "^3.0.3",
     "rimraf": "^5.0.5",
     "vitest": "^0.34.6",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.11.1",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
