--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -8,20 +8,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: Get Latest Code
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
+      - name: Set up Node 20
         uses: actions/setup-node@v3
         with:
           node-version: 20
           cache: 'npm'
 
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build the app
-        run: npm run build
+      - name: Build Project
+        run: | 
+          npm install
+          npm run build
         
       - name: 🧩 Extract branch name
         shell: bash
@@ -31,8 +30,9 @@ jobs:
       - name: 🚀 Deploy to cPanel
         uses: SamKirkland/FTP-Deploy-Action@4.1.0
         with:
-          server: ${{ secrets.CPANEL_DOMAIN }}
+          server: ${{ secrets.CPANEL_FTP_SERVER }}
           username: ${{ secrets.CPANEL_FTP_USERNAME }}
           password: ${{ secrets.CPANEL_FTP_PASS }}
+          protocol: ${{ secrets.CPANEL_FTP_PROTOCOL }}
           server-dir: /${{ steps.extract_branch.outputs.branch }}/
-          local-dir: /dist/
+          local-dir: ./dist/
