--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,31 +5,30 @@ on:
     branches:
       - main
 
-jobs:
-  # test:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: 🧪 Testing Frontend
-  #       uses: actions/setup-node@v3
-  #       with:
-  #         node-version: 14
-  #         cache: 'npm'
-  #     - run: npm install
-  #     - run: npm test
-      
+jobs:      
   build:
-    # needs: test
     runs-on: ubuntu-latest
     steps:
-      - name: 🚀 Deploy to cPanel
-        id: deploy
-        uses: pinkasey/cpanel-repository-action@v1.0.0
+      - name: 📈 Get Latest Code
+        uses: actions/checkout@v3
+
+      - name: 👾 Set up Node 20
+        uses: actions/setup-node@v3
         with:
-          hostname: ${{ vars.CPANEL_DOMAIN }}
-          repository_root: ${{ secrets.CPANEL_REPOSITORIES_PATH }}/${{ vars.REPOSITORY_NAME }}-dev
-          cpanel_username: ${{ secrets.CPANEL_USERNAME }}
-          cpanel_token: ${{ secrets.CPANEL_API_TOKEN_DEV }}
-          branch: main
-      - name: echo deploy-duration
-        run: echo "Deployment took ${{ steps.deploy.outputs.duration }} milliseconds"
+          node-version: 20
+          cache: 'npm'
+
+      - name: 🔨 Build Project
+        run: | 
+          npm install
+          npm run build
+      
+      - name: 🚀 Deploy to cPanel
+        uses: SamKirkland/FTP-Deploy-Action@4.1.0
+        with:
+          server: ${{ secrets.CPANEL_FTP_SERVER }}
+          username: ${{ secrets.CPANEL_PROD_FTP_USERNAME }}
+          password: ${{ secrets.CPANEL_PROD_FTP_PASS }}
+          protocol: ${{ secrets.CPANEL_FTP_PROTOCOL }}
+          server-dir: /
+          local-dir: ./dist/
