--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -1,8 +1,9 @@
 name: 🚀 Development Deploy
 
 on:
-  pull_request:
-    branches: [ main ]
+  push:
+    branches:
+      - develop
 
 jobs:      
   build:
