--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nivo/bar": "^0.87.0",
     "@nivo/pie": "^0.87.0",
+    "axios": "^1.7.7",
     "lucide-react": "^0.452.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
