--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "lucide-react": "^0.452.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "@types/js-cookie": "^2.2.1",
+    "js-cookie": "^2.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
